--- a/pages/tidytuesday.qmd
+++ b/pages/tidytuesday.qmd
@@ -2,7 +2,7 @@
 title: "Tidytuesday"
 format: html
 listing:
-  contents: "pages/tidytuesday/**/*.qmd"
+  contents: "tidytuesday/**/*.qmd"
   type: grid
 ---
 
