--- a/pages/projets.qmd
+++ b/pages/projets.qmd
@@ -3,7 +3,7 @@ title: "Projets"
 format: html
 listing:
   contents: "projets/*.qmd"
-  type: default
+  type: grid
 ---
 
 Ci-dessous vous pourrez retrouver des outils développés pour des projets professionnels ou personnels. \n
@@ -11,9 +11,8 @@ Ci-dessous vous pourrez retrouver des outils développés pour des projets profe
 ::: callout-caution
 ## Cette section est encore en travaux !
 
-Des projets seront bientôt publiés ici
+Plus de projets seront bientôt publiés ici
 :::
 
-![](/images/en_construction.jpg){fig-align="center"}
 
 
