--- a/pages/profil.qmd
+++ b/pages/profil.qmd
@@ -74,7 +74,9 @@ Les compétences que je souhaite développer dans les mois à venir, au 15 juin 
 
     -   Développer des applis Shiny *Production-grade* avec {rhino} et/ou {golem}, en intégrant des tests unitaires, d'intégration et End-to-End
 
-    -   Apprendre la dockerisation et déployer au moins une appli Shiny dans un docker
+    -   Apprendre la dockerisation et déployer au moins une appli Shiny dans un docker ✅
+
+        -   Déployer cette application via un workflow dans GitHub Pages (Septembre)
 
 -   Découvrir un client Cloud (GCP/AWS/Azure) (Fin 2025)
 
@@ -85,5 +87,3 @@ Les compétences que je souhaite développer dans les mois à venir, au 15 juin 
     -   Remise à niveau en statistiques
 
     -   Me former à l'utilisation du package {tidymodels}
-
-
