--- a/pages/projets/Gestionnaire_projets.qmd
+++ b/pages/projets/Gestionnaire_projets.qmd
@@ -10,4 +10,4 @@ categories: [Shiny, Gestion de projets, Dashboard]
 Cette application Shiny a été créée comme un tableau de bord permettant à un chef de projet de suivre l'avancée de différentes études.
 A partir d'un jeu de données fictif chargé dans l'application, il est possible de suivre le nombre et le détail des projets, ainsi que le calendrier de chaque projet et la charge de travail à venir.
 
-L'application est disponible [ici](https://connect.posit.cloud/fmarchais/content/01994f5a-e115-2ac0-1cee-673873fced1b)
+L'application est disponible [ici](https://01994f5a-e115-2ac0-1cee-673873fced1b.share.connect.posit.cloud)
