Update report.qmd for Tidytuesday 2025-09-30

--- a/pages/tidytuesday/20250930/report.qmd
+++ b/pages/tidytuesday/20250930/report.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Tidytuesday 2025-09-30"
+title: "Cranes"
 author: "Félix Marchais"
 description: Observations de grues en Suède
 date: "2025-10-07"
@@ -152,3 +152,4 @@ clean_cranes %>%
 # ggsave(filename = "my_plot.png", dpi = "retina")
 
 ```
+
